--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Another Day</title>
+  <title>My Thesis || Main Page</title>
   <style>
     body {
       display: flex;
@@ -15,6 +15,17 @@
       background-color: #ece6e3;
     }
 
+    #container {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+    }
+
+    #shelf-container {
+      display: flex;
+      align-items: center;
+    }
+
     #door {
       margin-top: -20px; /* Adjust the value to move the door up */
       cursor: pointer;
@@ -23,30 +34,41 @@
     #bed, #meow {
       cursor: pointer;
     }
+
+    #asciiArt {
+      height: 70px;
+    }
   </style>
 </head>
 <body>
-  <pre id="asciiArt"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-      \    /\
-       )  ( ')
-      (  /  )
-       \(__)|
-  </pre>
-  <pre id="meow"><br><br><br><br><br><br><br><br><br><br><br><br>
-   _______
-  /       \
-  | meow. |
- /________/
-  </pre>
-  <pre><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-     /
-    /z
-   /zz
-  /zzz
- /zzzz
-/zzzzz
-</pre>
-  <pre id="bed" onclick="toggleBed()"> <!-- https://asciiart.website/index.php?art=objects/furniture/beds -->
+  <div id="container">
+    <div id="shelf-container">
+      <pre id="asciiArt">
+  _  _  ____  __    __     __   _
+ / )( \(  __)(  )  (  )   /  \ / \
+ ) __ ( ) _) / (_/\/ (_/\(  O )\_/
+ \_)(_/(____)\____/\____/ \__/ (_)
+      </pre>
+    </div>
+    <div id="shelf-container">
+      <pre id="asciiArt"><br>
+  _  _  ____  __     ___  __   _  _  ____    ____  __     _  _  _  _
+ / )( \(  __)(  )   / __)/  \ ( \/ )(  __)  (_  _)/  \   ( \/ )( \/ )
+ \ /\ / ) _) / (_/\( (__(  O )/ \/ \ ) _)     )( (  O )  / \/ \ )  /
+ (_/\_)(____)\____/ \___)\__/ \_)(_/(____)   (__) \__/   \_)(_/(__/
+      </pre>
+    </div>
+    <div id="shelf-container">
+      <pre id="asciiArt">
+  ____  _  _  ____  ____  __  ____      __   __   _  _  ____  __ _  ____  _  _
+ (_  _)/ )( \(  __)/ ___)(  )/ ___)   _(  ) /  \ / )( \(  _ \(  ( \(  __)( \/ )
+   )(  ) __ ( ) _) \___ \ )( \___ \  / \) \(  O )) \/ ( )   //    / ) _)  )  /
+  (__) \_)(_/(____)(____/(__)(____/  \____/ \__/ \____/(__\_)\_)__)(____)(__/
+      </pre>
+    </div>
+  </div>
+
+  <!-- <pre id="bed" onclick="toggleBed()"> https://asciiart.website/index.php?art=objects/furniture/beds
     <br><br><br><br><br><br><br><br><br><br><br>
       _      ()              ()      _
      / \     ||______________||     / \
@@ -120,131 +142,131 @@ o(=(=(=(=)=)=)=)o
  !!!____|____!!!
  !!!=========!!!
 _!!!_________!!!__<br><br>
-  </pre>
+  </pre> -->
   <script>
     let isOpen = true;
 
-    const asciiArtElement = document.getElementById('asciiArt');
-    let currentFrame = 0;
-
-    function updateAsciiArt() {
-      switch (currentFrame) {
-        case 0:
-          asciiArtElement.textContent = `
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      /    /\\
-     (    ( \')
-      \\  /  )
-       \\(__)|
-           `;
-          break;
-        case 1:
-        asciiArtElement.textContent = `
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      \\    /\\
-       )  ( \')
-      (  /  )
-       \\(__)|
-         `;
-          break;
-      }
-
-      // Increment frame and loop back to 0 after the 3rd frame
-      currentFrame = (currentFrame + 1) % 2;
-    }
-
-    // Update the ASCII art every 1 second
-    setInterval(updateAsciiArt, 1000);
-    let isPersonInBed = true;
-
-    function toggleBed() {
-      const bedElement = document.getElementById('bed');
-
-      if (isPersonInBed) {
-        // Person is in bed, show empty bed
-        bedElement.innerHTML = `
-        <br><br><br><br><br><br><br><br><br><br><br>
-      _      ()              ()      _
-     / \\     ||______________||     / \\
-    /___\\    |                |    /___\\
-      |      |                |      |
-     (_)     |_______  _______|     (_)
-  ___/_\\___  {_______}{_______}  ___/_\\___
-   |__~__|   %%%%%%%%%%%%%%%%%%   |__~__|
-___|_____|__%%%%%%%%%%%%%%%%%%%%__|_____|___
-   |     | %%%%%%%%%%%%%%%%%%%%%% |     |
-          %%%%%%%%%%%%%%%%%%%%%%%%
-         %%%%%%%%%%%%%%%%%%%%%%%%%%   웃
-zzzzzzzz%%%%%%%%%%%%%%%%%%%%%%%%%%%%zzzzzzzz
-zzzzzzz/||||||||||||||||||||||||||||\\zzzzzzz
-zzzzzzz||||||||||||||||||||||||||||||zzzzzzz
-zzzzzzz||||||||||||||||||||||||||||||zzzzzzz
-zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz
-zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz
-        `;
-      } else {
-        // Person is out of bed, show person in bed
-        bedElement.innerHTML = `
-        <br><br><br><br><br><br><br><br><br><br><br>
-      _      ()              ()      _
-     / \\     ||______________||     / \\
-    /___\\    |                |    /___\\
-      |      |                |      |
-     (_)     |_______  _______|     (_)
-  ___/_\\___  {___O___}{_______}  ___/_\\___
-   |__~__|   %%%%%%%%%%%%%%%%%%   |__~__|
-___|_____|__%%%%%%%%%%%%%%%%%%%%__|_____|___
-   |     | %%%%%%%%%%%%%%%%%%%%%% |     |
-          %%%%%%%%%%%%%%%%%%%%%%%%
-         %%%%%%%%%%%%%%%%%%%%%%%%%%
-zzzzzzzz%%%%%%%%%%%%%%%%%%%%%%%%%%%%zzzzzzzz
-zzzzzzz/||||||||||||||||||||||||||||\\zzzzzzz
-zzzzzzz||||||||||||||||||||||||||||||zzzzzzz
-zzzzzzz||||||||||||||||||||||||||||||zzzzzzz
-zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz
-zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz
-        `;
-      }
-
-      // Toggle the person in bed state
-      isPersonInBed = !isPersonInBed;
-    }
-
-    function goToBathroom() {
+//     const asciiArtElement = document.getElementById('asciiArt');
+//     let currentFrame = 0;
+//
+//     function updateAsciiArt() {
+//       switch (currentFrame) {
+//         case 0:
+//           asciiArtElement.textContent = `
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//   _  _  ____  __    __     __   _
+//  / )( \\(  __)(  )  (  )   /  \\ / \\
+//  ) __ ( ) _) / (_/\\/ (_/\\(  O )\\_/
+//  \\_)(_/(____)\\____/\\____/ \\__/ (_)
+//            `;
+//           break;
+//         case 1:
+//         asciiArtElement.textContent = `
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//         _  _  ____  __    __     __   _
+//        / )( \\(  __)(  )  (  )   /  \\ / \\
+//        ) __ ( ) _) / (_/\\/ (_/\\(  O )\\_/
+//        \\_)(_/(____)\\____/\\____/ \\__/ (_)
+//          `;
+//           break;
+//       }
+//
+//       // Increment frame and loop back to 0 after the 3rd frame
+//       currentFrame = (currentFrame + 1) % 2;
+//     }
+//
+//     // Update the ASCII art every 1 second
+//     setInterval(updateAsciiArt, 1000);
+//     let isPersonInBed = true;
+//
+//     function toggleBed() {
+//       const bedElement = document.getElementById('bed');
+//
+//       if (isPersonInBed) {
+//         // Person is in bed, show empty bed
+//         bedElement.innerHTML = `
+//         <br><br><br><br><br><br><br><br><br><br><br>
+//       _      ()              ()      _
+//      / \\     ||______________||     / \\
+//     /___\\    |                |    /___\\
+//       |      |                |      |
+//      (_)     |_______  _______|     (_)
+//   ___/_\\___  {_______}{_______}  ___/_\\___
+//    |__~__|   %%%%%%%%%%%%%%%%%%   |__~__|
+// ___|_____|__%%%%%%%%%%%%%%%%%%%%__|_____|___
+//    |     | %%%%%%%%%%%%%%%%%%%%%% |     |
+//           %%%%%%%%%%%%%%%%%%%%%%%%
+//          %%%%%%%%%%%%%%%%%%%%%%%%%%   웃
+// zzzzzzzz%%%%%%%%%%%%%%%%%%%%%%%%%%%%zzzzzzzz
+// zzzzzzz/||||||||||||||||||||||||||||\\zzzzzzz
+// zzzzzzz||||||||||||||||||||||||||||||zzzzzzz
+// zzzzzzz||||||||||||||||||||||||||||||zzzzzzz
+// zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz
+// zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz
+//         `;
+//       } else {
+//         // Person is out of bed, show person in bed
+//         bedElement.innerHTML = `
+//         <br><br><br><br><br><br><br><br><br><br><br>
+//       _      ()              ()      _
+//      / \\     ||______________||     / \\
+//     /___\\    |                |    /___\\
+//       |      |                |      |
+//      (_)     |_______  _______|     (_)
+//   ___/_\\___  {___O___}{_______}  ___/_\\___
+//    |__~__|   %%%%%%%%%%%%%%%%%%   |__~__|
+// ___|_____|__%%%%%%%%%%%%%%%%%%%%__|_____|___
+//    |     | %%%%%%%%%%%%%%%%%%%%%% |     |
+//           %%%%%%%%%%%%%%%%%%%%%%%%
+//          %%%%%%%%%%%%%%%%%%%%%%%%%%
+// zzzzzzzz%%%%%%%%%%%%%%%%%%%%%%%%%%%%zzzzzzzz
+// zzzzzzz/||||||||||||||||||||||||||||\\zzzzzzz
+// zzzzzzz||||||||||||||||||||||||||||||zzzzzzz
+// zzzzzzz||||||||||||||||||||||||||||||zzzzzzz
+// zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz
+// zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz
+//         `;
+//       }
+//
+//       // Toggle the person in bed state
+//       isPersonInBed = !isPersonInBed;
+//     }
+//
+//     function goToBathroom() {
       // if (!isPersonInBed) {
         window.location.href = 'bathroom.html';
       //}
