--- a/childhood.html
+++ b/childhood.html
@@ -68,10 +68,18 @@
                               ::::::==--.
                              .-=:.....:=:
                               .-==+++=-.
+              ,
+    ,        / )
+   ( ＼;””~ ͡ ."
+    ˜'ミ ・ ェ)
+       >    ,”
+へ'""~ノ    ミ ╮
+  ,) ノ,,_,  ,\)
+  し'し'   |ノ
       </pre>
     </div>
     <div id="container">
-      <pre class="pointer" onclick="goToIntroduction()">
+      <pre class="pointer" onclick="goToLetters()">
                 .
  .. ............;;.
   ..::::::::::::;;;;.
@@ -81,8 +89,8 @@
     </div>
   </div>
   <script>
-    function goToIntroduction() {
-      window.location.href = 'introduction.html';
+    function goToLetters() {
+      window.location.href = 'letters.html';
     }
   </script>
 </body>
