--- a/childhood.html
+++ b/childhood.html
@@ -9,24 +9,19 @@
 <body>
   <div id="container">
     <div id="container">
-      <!-- <pre>
-          _,::'''',..
-         /        \ :,
-         ":        ,  :
-          :       ,  :
-           :,  , : \ ,
-            ,'',
-           /    \
-          /      \
-         /        \
-        /__________\
-            ' ' |
-            | | |
-            | |_|
-           /__|
-      </pre> -->
+      <pre>
+         . - .
+       / / ^ \ \
+       ( \   / )
+         .-'-.
+        /     \
+        |     |
+        |_____|
+          |||
+          \|/
+      </pre>
     </div>
-    <div id="container">
+    <!-- <div id="container">
       <pre>
                                  .:::::..
                             .:-:...::::::::.
@@ -77,7 +72,7 @@
   ,) ノ,,_,  ,\)
   し'し'   |ノ
       </pre>
-    </div>
+    </div> -->
     <div id="container">
       <pre class="pointer" onclick="goToLetters()">
                 .
