--- a/childhood.html
+++ b/childhood.html
@@ -9,16 +9,19 @@
 <body>
   <div id="container">
     <div id="container">
-      <pre>
-         . - .
-       / / ^ \ \
-       ( \   / )
+      <pre class="pointer asciiAlign" onclick="toggleGirl()">
+      ╭──────────╮
+      │ click me │
+      ╰───────,──╯
+         . -౨ৎ.
+        // ^ \\
+        (\   /)
          .-'-.
-        /     \
-        |     |
-        |_____|
-          |||
-          \|/
+        //   \\
+        o|   |o
+         |___|
+          | |
+          . .
       </pre>
     </div>
     <!-- <div id="container">
@@ -73,7 +76,7 @@
   し'し'   |ノ
       </pre>
     </div> -->
-    <div id="container">
+    <!-- <div id="container">
       <pre class="pointer" onclick="goToLetters()">
                 .
  .. ............;;.
@@ -81,7 +84,7 @@
 . . ::::::::::::;;:'
                 :'
       </pre>
-    </div>
+    </div> -->
   </div>
   <script>
     function goToLetters() {
