--- a/letters.html
+++ b/letters.html
@@ -205,3 +205,6 @@ lc'\""""""||                    ||""""""""""""(     )"""""""""""""""""""""""""""
         '|___|'
           | |
           . .
+
+guy laughs and walks away
+emojis and the history of emojis, expressing feelings without words and originate from ascii art
