--- a/childhood.html
+++ b/childhood.html
@@ -160,14 +160,26 @@ I grew up as a Chinese American in a small, predominantly white town <br><br>whe
 ***************____|          |=====|          |________|
  *************               /=======\\
 
-    . -౨ৎ.
-   // ^ \\\\
-  ()\\   /()
-    .-'-.
-   //   \\\\
-   '|___|'
-     | |
-     . .`;
+
+
+                             ╭╶╶╶^╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╮
+                             ╵                            ╭─────────────╮    ╵
+                             ╵                            │ You must be │    ╵
+                             ╵                            │ really good │    ╵
+                             ╵                    . - .   │   at math   │    ╵
+                             ╵                   (/ ^ \\)  ,─────────────╯    ╵
+                             ╵                   (_\\ /_)                     ╵
+                             ╵     . -౨ৎ.         .-'-.                      ╵
+                             ╵    // ^ \\\\      __/(_,_)\\\\                    ╵
+                             ╵   ()\\   /()     --  ) ( //                    ╵
+                             ╵     .-'-.          /   \\                      ╵
+                             ╵    //   \\\\         |   |                      ╵
+                             ╵    '|___|'         |___|                      ╵
+                             ╵      | |            \\|/                       ╵
+                             ╵      . .            /Y\\                       ╵
+                             ╵                                               ╵
+                             ╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
+`;
 
     if (!walking) {
       walking = true;
