--- a/childhood.html
+++ b/childhood.html
@@ -170,8 +170,8 @@ I grew up as a Chinese American in a small, predominantly white town <br><br>whe
                              ╵                   (/ ^ \\)  ,─────────────╯    ╵
                              ╵                   (_\\ /_)                     ╵
                              ╵     . -౨ৎ.         .-'-.                      ╵
-                             ╵    // ^ \\\\      __/(_,_)\\\\                    ╵
-                             ╵   ()\\   /()     --  ) ( //                    ╵
+                             ╵    // ^ \\\\      __/(   )\\\\                    ╵
+                             ╵   ()\\   /()     --  )=( //                    ╵
                              ╵     .-'-.          /   \\                      ╵
                              ╵    //   \\\\         |   |                      ╵
                              ╵    '|___|'         |___|                      ╵
@@ -179,6 +179,28 @@ I grew up as a Chinese American in a small, predominantly white town <br><br>whe
                              ╵      . .            /Y\\                       ╵
                              ╵                                               ╵
                              ╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
+`;
+
+    const staticHome = `
+                                                  {}
+                                                 oIIo
+                                                 oIIo
+                     []=++-                       ||
+                    _II__|                        ||       I.
+                   [[__] |                        ||       |:
+    _________________||  |___                    _||_      |:
+   /^^^^^^,-.^^^^^^^^\|__|^^^\                 .' || `.    |:
+  /     ,',-.`.               \               /   ||   \   |:
+ /    ,','   `.`.     ,-"""-.  \             |    ::    |  |:
+/___,','__   __`.`.__/_,"T"._\__\            )_   ::   _(  |:
+|='-'||/\| |^^||`-`=|_|_|_|_|=|               _)( :: )(_   |:
+|= = ||)(| |__||= ==|_|_|_|_|=|              ) ._)::(_. (  |:
+|= ==|"""" """"| = =____= =_==|             /     II     \ |:
+|== =| __   __ |= =| [] | |^|=|             |  .-.||     | |:
+|= ==||/\| |==||== |   o|=|_| |              \(___)(    /  |:
+|== =||)(| |  || = | == | == =|               `.__\/__.'   I'
+|= ==|"""" """"|== |____|= = =|
+"""""|_________|"""'====`""""""                   
 `;
 
     if (!walking) {
@@ -223,11 +245,12 @@ I grew up as a Chinese American in a small, predominantly white town <br><br>whe
         clearInterval(walkInterval);
         walking = false;
         girl.textContent = staticExpectations;
+    } else if (clickCount === 7) {
+        narrative.textContent = "At home, I was expected to be obedient, to excel, to bring pride to my family.";
+        clearInterval(walkInterval);
+        walking = false;
+        girl.textContent = staticHome;
     }
-    // else if (clickCount === 5) {
-    //     window.location.href = "parents.html";
-    //     return;
-    // }
 
     clickCount++;
   }
